# currency-exchange-rates-etl

./: .gitignore  README.md  exceptions.py  format_code.sh  main.py  pyproject.toml
data_providers/: __init__.py  data_provider.py  ecb_data_provider.py  free_currency_data_provider.py
entities/: __init__.py  exchange_rate.py
importers/: __init__.py  ebc_exchange_rates_importer.py  exchange_rates_importer.py  free_currency_exchange_rates_importer.py
storage_providers/: __init__.py  gcp_big_query_provider.py  postgres_provider.py  sqlite_provider.py  storage_provider.py
value_objects/: __init__.py  source.py  storage_type.py
