[tool.poetry]
name = "etl-for-currency-exchange-rates"
version = "0.1.0"
description = "Fetch currency exchange rates from specific sources and save in data warehouse"
authors = ["Sebastian Derendarz <sebastian.derendarz@stxnext.pl>"]

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
